src/objects/zqu__ProductRatePlanChargeOption__c.object
<CustomObject>
    <fields>
        <fullName>zqu__Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__Default_Quantity__c</fullName>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Max_Quantity__c</fullName>
        <label>Maximum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Min_Quantity__c</fullName>
        <label>Minimum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__Origin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Option</label>
        <referenceTo>zqu__ProductRatePlanChargeOption__c</referenceTo>
        <relationshipLabel>Product Rate Plan Charge Options</relationshipLabel>
        <relationshipName>Product_Rate_Plan_Charge_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__PriceSummary__c</fullName>
        <label>Price Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanCharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan Charge</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>zqu__ProductRatePlanCharge__c.zqu__ProductRatePlan__c</field>
                <operation>equals</operation>
                <valueField>$Source.zqu__ProductRatePlan__c</valueField>
            </filterItems>
            <filterItems>
                <field>zqu__ProductRatePlanCharge__c.zqu__Deleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>zqu__ProductRatePlanCharge__c</referenceTo>
        <relationshipLabel>Product Rate Plan Charge Options</relationshipLabel>
        <relationshipName>Product_Rate_Plan_Charge_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanOption__c</fullName>
        <label>Product Rate Plan Option</label>
        <referenceTo>zqu__ProductRatePlanOption__c</referenceTo>
        <relationshipLabel>Product Rate Plan Charge Options</relationshipLabel>
        <relationshipName>Product_Rate_Plan_Charge_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan</label>
        <referenceTo>zqu__ProductRatePlan__c</referenceTo>
        <relationshipLabel>Product Rate Plan Charge Options</relationshipLabel>
        <relationshipName>Product_Rate_Plan_Charge_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Rate Plan Charge Option</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Rate Plan Charge Options</pluralLabel>
    <recordTypes>
        <fullName>zqu__Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Snapshot</fullName>
        <active>true</active>
        <label>Snapshot</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>zqu__Default_Quantity_Rule</fullName>
        <active>true</active>
        <description>Default Quantity should &gt;= 0</description>
        <errorConditionFormula>zqu__Default_Quantity__c &lt; 0</errorConditionFormula>
        <errorDisplayField>zqu__Default_Quantity__c</errorDisplayField>
        <errorMessage>Default Quantity should be greater than or equal to 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Max_Quantity_Rule</fullName>
        <active>true</active>
        <description>Min Quantity should &gt;= 0</description>
        <errorConditionFormula>zqu__Max_Quantity__c &lt; 0</errorConditionFormula>
        <errorDisplayField>zqu__Max_Quantity__c</errorDisplayField>
        <errorMessage>Max Quantity should be greater than or equal to 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Min_Quantity_Less_Than_Max</fullName>
        <active>true</active>
        <description>Min Quantity should &lt;= Max</description>
        <errorConditionFormula>zqu__Min_Quantity__c  &gt;  zqu__Max_Quantity__c</errorConditionFormula>
        <errorDisplayField>zqu__Min_Quantity__c</errorDisplayField>
        <errorMessage>Min Quantity should be less than or equal to Max Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Min_Quantity_Rule</fullName>
        <active>true</active>
        <description>Min Quantity should &gt;= 0</description>
        <errorConditionFormula>zqu__Min_Quantity__c &lt; 0</errorConditionFormula>
        <errorDisplayField>zqu__Min_Quantity__c</errorDisplayField>
        <errorMessage>Min Quantity should be greater than or equal to 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zqu__Override_Rule</fullName>
        <active>true</active>
        <description>Override ProductRatePlanCharge should belong to the ProductRatePlanOption overrided ProductRatePlan</description>
        <errorConditionFormula>zqu__ProductRatePlanCharge__r.zqu__ProductRatePlan__c  &lt;&gt;  zqu__ProductRatePlanOption__r.zqu__ProductRatePlan__c</errorConditionFormula>
        <errorDisplayField>zqu__ProductRatePlanCharge__c</errorDisplayField>
        <errorMessage>Override ProductRatePlanCharge should belong to the ProductRatePlanOption overrided ProductRatePlan</errorMessage>
    </validationRules>
</CustomObject>